# openexrid

./: .build_env.example  .gitignore  BUILDING  CMakeLists.txt  INSTALL  LICENSE  README.md  build-conan.sh  build.sh  conanfile.py  linux-docker-build.sh  make_installer.py  makefile  makefile.config  openexrid.sln  openidmask.exrid  openidmask.sln
build_scripts/: build_windows.sh
build_scripts/linux/: build-conan.sh  linux-docker-build.sh
build_scripts/linux/docker/: bootstrap.sh  cmake-bootstrap.sh  conan-bootstrap.sh
build_tools/: conan_profile_linux_gcc4.8  conan_profile_linux_gcc9.3  conan_profile_windows_vs2010  conan_profile_windows_vs2015  conan_profile_windows_vs2019  installer.py
build_tools/linux/: build-conan.sh  linux-docker-build.sh
build_tools/linux/docker/: Dockerfile  conan_profile_linux_gcc4.1  entrypoint.sh  gcc-4.8.2.sh
build_tools/linux/docker_14plus/: Dockerfile
build_tools/linux/docker_9_13/: Dockerfile  extra-bootstrap.sh
cmake/: compile_definitions.cmake  output_folders.cmake  precompiled_headers.cmake
cmake/Modules/: FindNuke100.cmake  FindNuke105.cmake  FindNuke111.cmake  FindNuke112.cmake  FindNuke113.cmake  FindNuke120.cmake  FindNuke121.cmake  FindNuke122.cmake  FindNuke130.cmake  FindNuke132.cmake  FindNuke140.cmake  FindNuke151.cmake  FindNuke160.cmake  FindNuke90.cmake  FindOFX.cmake  FindOpenImageIO.cmake
data/: openexrid.abc  openidmask.abc  openidmask.gproject  openidmask.oim  sample_motionblur_transparency.exr
docker/: Dockerfile  extra-bootstrap.2.sh  extra-bootstrap.sh  gcc-4.1.2.sh
libopenidmask/: Builder.cpp  Builder.h  Mask.cpp  Mask.h  Query.h  Sample.h  libopenidmask.vcxproj  zlib.cpp
nuke/: DeepOpenEXRId.cpp  DeepOpenEXRId.h  PickingKnob.cpp  PickingKnob.h  b64.cpp  makefile  md5.cpp  md5.h  menu.py  nuke.cmake  nuke.vcxproj  zlib.cpp
nuke/OSL/: accum.cpp  automata.cpp  closure.cpp  lpeparse.cpp  lpexp.cpp
nuke/OSL/include/OSL/: optautomata.h  oslversion.h
nuke10/: makefile  nuke10.vcxproj
nuke10.0/: CMakeLists.txt
nuke10.5/: CMakeLists.txt  makefile  nuke10.5.vcxproj
nuke11/: makefile  nuke11.vcxproj
nuke11.1/: CMakeLists.txt  makefile  nuke11.1.vcxproj
nuke11.2/: CMakeLists.txt  makefile  nuke11.2.vcxproj
nuke11.3/: CMakeLists.txt  makefile  nuke11.3.vcxproj
nuke12.0/: CMakeLists.txt
nuke12.1/: CMakeLists.txt
nuke12.2/: CMakeLists.txt
nuke13.0/: CMakeLists.txt
nuke13.2/: CMakeLists.txt
nuke14.0/: CMakeLists.txt
nuke15.1/: CMakeLists.txt
nuke16.0/: CMakeLists.txt
nuke9/: makefile  nuke9.vcxproj
nuke9.0/: CMakeLists.txt
openexrid/: Builder.cpp  Builder.h  CMakeLists.txt  Mask.cpp  Mask.h  Query.h  Sample.h  Slice.h  Version.h  makefile  openexrid.vcxproj  version.h  zlib.cpp
openfx/: CMakeLists.txt  dir.cpp  dir.h  file_range.cpp  instance.h  interact.cpp  makefile  ofxUtilities.h  openfx.cpp  openfx.vcxproj
openidmask/: Builder.cpp  Builder.h  Mask.cpp  Mask.h  Query.h  Sample.h  Slice.h  makefile  openidmask.vcxproj
test/: makefile  test.cpp  test.vcxproj
