
IF(OPENFX_FOUND)

	PROJECT(OpenEXRIdOFX)

	FILE(GLOB_RECURSE PROJECT_HDR "${CMAKE_CURRENT_LIST_DIR}/*.h")
	FILE(GLOB_RECURSE PROJECT_SRC "${CMAKE_CURRENT_LIST_DIR}/*.cpp")

	SOURCE_GROUP("Headers" FILES ${PROJECT_HDR})
	SOURCE_GROUP("Sources" FILES ${PROJECT_SRC})

	INCLUDE_DIRECTORIES("${OPENEXRID_ROOT}")
	INCLUDE_DIRECTORIES("${OFX_PATH}/include")

	ADD_LIBRARY(${PROJECT_NAME} SHARED ${PROJECT_HDR} ${PROJECT_SRC})

	TARGET_LINK_LIBRARIES(${PROJECT_NAME} LibOpenEXRId)
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OPENIMAGEIO_LIBRARIES} re2 ${OPENEXR_LIBRARIES})

	SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "")
	SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "openexrid")
	SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SUFFIX ".ofx")

	SET_VS_FOLDER(Openfx/)

ENDIF()
