
PROJECT(OpenEXRIdOFX)

FILE(GLOB_RECURSE PROJECT_HDR "${CMAKE_CURRENT_LIST_DIR}/*.h")
FILE(GLOB_RECURSE PROJECT_SRC "${CMAKE_CURRENT_LIST_DIR}/*.cpp")

SOURCE_GROUP("Headers" FILES ${PROJECT_HDR})
SOURCE_GROUP("Sources" FILES ${PROJECT_SRC})

INCLUDE_DIRECTORIES("${OPENEXRID_ROOT}")
INCLUDE_DIRECTORIES("${OFX_INCLUDE_DIR}")

ADD_LIBRARY(${PROJECT_NAME} SHARED ${PROJECT_HDR} ${PROJECT_SRC})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} LibOpenEXRId)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OPENIMAGEIO_LIBRARIES} re2 ${OPENEXR_LIBRARIES} ${OPENGL_LIBRARIES})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "openexrid")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SUFFIX ".ofx")

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
	ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${OPENEXRID_ROOT}/build/debug/lib/
	LIBRARY_OUTPUT_DIRECTORY_DEBUG ${OPENEXRID_ROOT}/build/debug/lib/
	RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OPENEXRID_ROOT}/build/debug/lib/
	ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${OPENEXRID_ROOT}/build/relwithdebinfo/lib/
	LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${OPENEXRID_ROOT}/build/relwithdebinfo/lib/
	RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${OPENEXRID_ROOT}/build/relwithdebinfo/lib/
	ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OPENEXRID_ROOT}/build/release/lib/
	LIBRARY_OUTPUT_DIRECTORY_RELEASE ${OPENEXRID_ROOT}/build/release/lib/
	RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OPENEXRID_ROOT}/build/release/lib/
)
