
PROJECT(OpenEXRIdOFX)

FILE(GLOB_RECURSE PROJECT_HDR "${CMAKE_CURRENT_LIST_DIR}/*.h")
FILE(GLOB_RECURSE PROJECT_SRC "${CMAKE_CURRENT_LIST_DIR}/*.cpp")

SOURCE_GROUP("Headers" FILES ${PROJECT_HDR})
SOURCE_GROUP("Sources" FILES ${PROJECT_SRC})

INCLUDE_DIRECTORIES("${OPENEXRID_ROOT}")
INCLUDE_DIRECTORIES("${OFX_INCLUDE_DIR}")

ADD_LIBRARY(${PROJECT_NAME} SHARED ${PROJECT_HDR} ${PROJECT_SRC})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} LibOpenEXRId)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OPENIMAGEIO_LIBRARIES} re2 ${OPENEXR_LIBRARIES} ${OPENGL_LIBRARIES} ${ZLIB_LIBRARIES})
IF (TARGET IlmBase::Half)
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} IlmBase::IlmBaseConfig IlmBase::Half IlmBase::Iex IlmBase::IexMath IlmBase::Imath OpenEXR::IlmImf)
ENDIF ()

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "openexrid")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SUFFIX ".ofx")

IF (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
	IF (CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 4.2)
		SET(OUTPUT_FOLDER "OFX/")
	ELSE (CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 4.2)
		SET(OUTPUT_FOLDER "OFX_nuke9/")
	ENDIF (CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 4.2)
ENDIF ()

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
	ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${OPENEXRID_ROOT}/build/debug/lib/${OUTPUT_FOLDER}
	LIBRARY_OUTPUT_DIRECTORY_DEBUG ${OPENEXRID_ROOT}/build/debug/lib/${OUTPUT_FOLDER}
	RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OPENEXRID_ROOT}/build/debug/lib/${OUTPUT_FOLDER}
	ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${OPENEXRID_ROOT}/build/relwithdebinfo/lib/${OUTPUT_FOLDER}
	LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${OPENEXRID_ROOT}/build/relwithdebinfo/lib/${OUTPUT_FOLDER}
	RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${OPENEXRID_ROOT}/build/relwithdebinfo/lib/${OUTPUT_FOLDER}
	ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OPENEXRID_ROOT}/build/release/lib/${OUTPUT_FOLDER}
	LIBRARY_OUTPUT_DIRECTORY_RELEASE ${OPENEXRID_ROOT}/build/release/lib/${OUTPUT_FOLDER}
	RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OPENEXRID_ROOT}/build/release/lib/${OUTPUT_FOLDER}
)
